modified businedd Social links

--- a/index.html
+++ b/index.html
@@ -153,19 +153,19 @@
                             <a href="https://opsbin.com" target="_blank" class="business-social-link" title="Website">
                                 <i class="fas fa-globe"></i>
                             </a>
-                            <a href="tel:+61423453240" class="business-social-link" title="Call">
+                            <a href="tel:+917510995385" class="business-social-link" title="Call">
                                 <i class="fas fa-phone"></i>
                             </a>
-                            <a href="https://www.linkedin.com/company/opsbin" target="_blank" class="business-social-link" title="LinkedIn">
+                            <a href="https://www.linkedin.com/company/utf_opsbin" target="_blank" class="business-social-link" title="LinkedIn">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a href="https://wa.me/+61423453240" target="_blank" class="business-social-link" title="WhatsApp">
+                            <a href="https://wa.me/+917510995385" target="_blank" class="business-social-link" title="WhatsApp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
-                            <a href="https://www.instagram.com/opsbinapp" target="_blank" class="business-social-link" title="Instagram">
+                            <a href="https://www.instagram.com/opsbin" target="_blank" class="business-social-link" title="Instagram">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="https://www.facebook.com/opsbinapp" target="_blank" class="business-social-link" title="Facebook">
+                            <a href="https://www.facebook.com/profile.php?id=100076796238177" target="_blank" class="business-social-link" title="Facebook">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                         </div>
@@ -200,19 +200,19 @@
                             <a href="https://bitstrail.com" target="_blank" class="business-social-link" title="Website">
                                 <i class="fas fa-globe"></i>
                             </a>
-                            <a href="tel:+61423453240" class="business-social-link" title="Call">
+                            <a href="tel:+919961605385" class="business-social-link" title="Call">
                                 <i class="fas fa-phone"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/bitstrail" target="_blank" class="business-social-link" title="LinkedIn">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a href="https://wa.me/+61423453240" target="_blank" class="business-social-link" title="WhatsApp">
+                            <a href="https://wa.me/+919961605385" target="_blank" class="business-social-link" title="WhatsApp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
-                            <a href="https://www.instagram.com/bitstrail" target="_blank" class="business-social-link" title="Instagram">
+                            <a href="https://www.instagram.com/bitstrail_com" target="_blank" class="business-social-link" title="Instagram">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="https://www.facebook.com/bitstrail" target="_blank" class="business-social-link" title="Facebook">
+                            <a href="https://www.facebook.com/bitstrail1" target="_blank" class="business-social-link" title="Facebook">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                         </div>
