--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="robin-hero.jpeg" alt="Robin Thomas - GRC Consultant & IT Security Specialist">
+                    <div class="hero-image-bg">
+                        <img src="robin-hero.png" alt="Robin Thomas - GRC Consultant & IT Security Specialist">
+                    </div>
                 </div>
             </div>
         </div>
