Fixed the number missmatch

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                 </div>
                 <div class="about-text">
                     <p>
-                        With over 9 years of experience in IT Security and Infrastructure Management, I've developed a deep understanding of enterprise security architecture and governance frameworks. My journey began with a passion for technology and has evolved into a comprehensive expertise in GRC, IT Security, and Infrastructure Management.
+                        My journey in technology began with a simple curiosity about how systems work and evolved into a passion for making them more secure and efficient. Over the years, I've transformed this passion into a successful career, helping organizations navigate the complex landscape of IT security and infrastructure management.
                     </p>
                     <p>
-                        As a GRC Consultant and IT Security Specialist, I've helped organizations implement robust security frameworks, achieve compliance with international standards, and build resilient IT infrastructures. My approach combines technical expertise with business acumen to deliver solutions that not only protect but also enable business growth.
+                        What sets me apart is my ability to bridge the gap between technical complexity and business objectives. I don't just implement security measures – I create comprehensive solutions that protect while enabling growth. My expertise in GRC and IT security has helped numerous organizations achieve and maintain compliance with international standards, turning potential vulnerabilities into competitive advantages.
                     </p>
                     <p>
-                        Currently, I'm leading two successful ventures - Opsbin and Bitstrail, where we're pushing the boundaries of what's possible in IT support services and software development. My focus is on creating innovative solutions that help businesses thrive in an increasingly digital world.
+                        Today, through Opsbin and Bitstrail, I'm channeling my experience into building innovative solutions that empower businesses. Whether it's providing cutting-edge IT support services or developing transformative software solutions, my goal remains the same: to help organizations thrive in the digital age while maintaining the highest standards of security and efficiency.
                     </p>
                 </div>
             </div>
@@ -123,7 +123,7 @@
 
     <section id="business" class="business">
         <div class="container">
-            <h2 class="section-title">What I’ve Built</h2>
+            <h2 class="section-title">What I've Built</h2>
             <div class="business-grid">
                 <div class="business-card">
                     <div class="business-content">
@@ -306,8 +306,11 @@
             <div class="marquee-line">
                 <div class="marquee-content" data-direction="left">
                     <div class="marquee-item">AWS</div>
+                    <div class="marquee-item">AWS EC2</div>
                     <div class="marquee-item">Azure</div>
                     <div class="marquee-item">GCP</div>
+                    <div class="marquee-item">Google Compute Engine</div>
+                    <div class="marquee-item">OpenStack</div>
                     <div class="marquee-item">DigitalOcean</div>
                     <div class="marquee-item">Linode</div>
                     <div class="marquee-item">Docker</div>
@@ -317,6 +320,12 @@
                     <div class="marquee-item">GitHub Actions</div>
                     <div class="marquee-item">Terraform</div>
                     <div class="marquee-item">Ansible</div>
+                    <div class="marquee-item">Infrastructure as Code</div>
+                    <div class="marquee-item">Bash</div>
+                    <div class="marquee-item">Python</div>
+                    <div class="marquee-item">Shell Scripting</div>
+                    <div class="marquee-item">Cron Jobs</div>
+                    <div class="marquee-item">Make.com</div>
                 </div>
             </div>
 
@@ -339,6 +348,19 @@
                     <div class="marquee-item">OPNsense</div>
                     <div class="marquee-item">FortiGate</div>
                     <div class="marquee-item">Cisco ASA</div>
+                    <div class="marquee-item">iptables</div>
+                    <div class="marquee-item">CSF</div>
+                    <div class="marquee-item">UFW</div>
+                    <div class="marquee-item">ModSecurity</div>
+                    <div class="marquee-item">Fail2ban</div>
+                    <div class="marquee-item">Snort</div>
+                    <div class="marquee-item">OSINT Tools</div>
+                    <div class="marquee-item">VLANs</div>
+                    <div class="marquee-item">SSH Key Management</div>
+                    <div class="marquee-item">Google SSO</div>
+                    <div class="marquee-item">MFA/OTP</div>
+                    <div class="marquee-item">AAA</div>
+                    <div class="marquee-item">IAM</div>
                 </div>
             </div>
 
@@ -349,15 +371,30 @@
                     <div class="marquee-item">Ubuntu</div>
                     <div class="marquee-item">CentOS</div>
                     <div class="marquee-item">RHEL</div>
+                    <div class="marquee-item">Debian</div>
+                    <div class="marquee-item">Windows</div>
                     <div class="marquee-item">Windows Server</div>
+                    <div class="marquee-item">VMware ESXi</div>
+                    <div class="marquee-item">Proxmox</div>
+                    <div class="marquee-item">KVM</div>
+                    <div class="marquee-item">Xen</div>
                     <div class="marquee-item">Apache</div>
                     <div class="marquee-item">Nginx</div>
+                    <div class="marquee-item">OpenLiteSpeed</div>
+                    <div class="marquee-item">IIS</div>
                     <div class="marquee-item">HAProxy</div>
                     <div class="marquee-item">Varnish</div>
                     <div class="marquee-item">LXC/LXD</div>
-                    <div class="marquee-item">KVM</div>
-                    <div class="marquee-item">VMware</div>
-                    <div class="marquee-item">Proxmox</div>
+                    <div class="marquee-item">Load Balancers</div>
+                    <div class="marquee-item">High Availability</div>
+                    <div class="marquee-item">Failover Systems</div>
+                    <div class="marquee-item">Postfix</div>
+                    <div class="marquee-item">Dovecot</div>
+                    <div class="marquee-item">BIND</div>
+                    <div class="marquee-item">DHCP</div>
+                    <div class="marquee-item">Asterisk</div>
+                    <div class="marquee-item">3CX</div>
+                    <div class="marquee-item">Proxy Servers</div>
                 </div>
             </div>
 
@@ -370,11 +407,17 @@
                     <div class="marquee-item">Redis</div>
                     <div class="marquee-item">MariaDB</div>
                     <div class="marquee-item">MSSQL</div>
+                    <div class="marquee-item">Supabase</div>
+                    <div class="marquee-item">Firebase</div>
                     <div class="marquee-item">Nagios</div>
                     <div class="marquee-item">Zabbix</div>
                     <div class="marquee-item">Grafana</div>
                     <div class="marquee-item">Prometheus</div>
                     <div class="marquee-item">ELK Stack</div>
+                    <div class="marquee-item">Rsnapshot</div>
+                    <div class="marquee-item">Automysqlbackup</div>
+                    <div class="marquee-item">Barracuda Backup</div>
+                    <div class="marquee-item">HP Data Protector</div>
                 </div>
             </div>
 
@@ -386,14 +429,38 @@
                     <div class="marquee-item">GitLab</div>
                     <div class="marquee-item">SVN</div>
                     <div class="marquee-item">Trello</div>
+                    <div class="marquee-item">Zoho</div>
+                    <div class="marquee-item">G Suite</div>
+                    <div class="marquee-item">Microsoft 365</div>
                     <div class="marquee-item">OpenLDAP</div>
-                    <div class="marquee-item">Postfix</div>
-                    <div class="marquee-item">Dovecot</div>
                     <div class="marquee-item">S3</div>
                     <div class="marquee-item">NFS</div>
                     <div class="marquee-item">SAN</div>
                     <div class="marquee-item">NAS</div>
                     <div class="marquee-item">GlusterFS</div>
+                </div>
+            </div>
+
+            <!-- Sixth Line - Web & Mobile Development -->
+            <div class="marquee-line">
+                <div class="marquee-content" data-direction="right">
+                    <div class="marquee-item">HTML</div>
+                    <div class="marquee-item">CSS</div>
+                    <div class="marquee-item">JavaScript</div>
+                    <div class="marquee-item">React</div>
+                    <div class="marquee-item">Next.js</div>
+                    <div class="marquee-item">TypeScript</div>
+                    <div class="marquee-item">PHP</div>
+                    <div class="marquee-item">Node.js</div>
+                    <div class="marquee-item">WordPress</div>
+                    <div class="marquee-item">WooCommerce</div>
+                    <div class="marquee-item">Shopify</div>
+                    <div class="marquee-item">Headless CMS</div>
+                    <div class="marquee-item">RESTful APIs</div>
+                    <div class="marquee-item">Tailwind CSS</div>
+                    <div class="marquee-item">React Native</div>
+                    <div class="marquee-item">Expo</div>
+                    <div class="marquee-item">AI Integrations</div>
                 </div>
             </div>
         </div>
@@ -402,7 +469,7 @@
 
     <section id="experience" class="experience">
         <div class="container">
-            <h2 class="section-title">Where I’ve Been</h2>
+            <h2 class="section-title">Where I've Been</h2>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
@@ -531,7 +598,7 @@
     </section>
 
     <section id="contact" class="contact">
-        <h2 class="section-title">Let’s Chat</h2>
+        <h2 class="section-title">Let's Chat</h2>
         <div class="contact-content">
             <div class="contact-info">
                 <a href="mailto:robinthomasonline@gmail.com" class="contact-item">
@@ -562,7 +629,7 @@
                         <span>Call</span>
                     </div>
                 </a>
-                <a href="tel:+614232452340" class="contact-item">
+                <a href="tel:+61423453240" class="contact-item">
                     <i class="fas fa-phone"></i>
                     <div class="contact-details">
                         <h3>Phone Australia</h3>
