--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robin Thomas | GRC Consultant & IT Security Specialist</title>
+    <title>Robin Thomas | Entrepreneur | IT & Cybersecurity Consultant | DevOps & Cloud Specialist | System Architect | GRC & Compliance Expert | Cloud & Infrastructure Security Consultant</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
