added mood logger and password generator

--- a/index.html
+++ b/index.html
@@ -597,14 +597,14 @@
         <div class="container">
             <h2 class="section-title">Projects That Hit Different</h2>
             <div class="projects-grid">
-                <div class="project-card">
+                <a href="https://smarthomi.app" target="_blank" class="project-card">
                     <div class="project-content">
                         <div class="project-header">
                             <i class="fas fa-home project-icon"></i>
                             <h3>Smart HOMI</h3>
-                            <a href="https://smarthomi.app" target="_blank" class="project-link">
+                            <span class="project-link">
                                 <i class="fas fa-external-link-alt"></i>
-                            </a>
+                            </span>
                         </div>
                         <p class="project-description">
                             Smart home operations and management interface. A shopping and Task management, inventory management, Bug tracking, and Meal planning with help of AI and IoT.  Integrate with existing Smart Home devices and services.
@@ -618,16 +618,16 @@
                             <span class="tech-tag">Home Operations</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card">
+                <a href="https://bookingtrails.com/" target="_blank" class="project-card">
                     <div class="project-content">
                         <div class="project-header">
                             <i class="fas fa-calendar-alt project-icon"></i>
                             <h3>Bookingtrails</h3>
-                            <a href="https://bookingtrails.com/" target="_blank" class="project-link">
+                            <span class="project-link">
                                 <i class="fas fa-external-link-alt"></i>
-                            </a>
+                            </span>
                         </div>
                         <p class="project-description">
                             Adventure sports and activities booking platform with AI recommendations and VR preview of the activities. Experience the adventure before you book.
@@ -639,16 +639,16 @@
                             <span class="tech-tag">AI Recommendations</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card">
+                <a href="timer/index.html" target="_blank" class="project-card">
                     <div class="project-content">
                         <div class="project-header">
                             <i class="fas fa-clock project-icon"></i>
                             <h3>Work Timer</h3>
-                            <a href="#" target="_blank" class="project-link">
+                            <span class="project-link">
                                 <i class="fas fa-external-link-alt"></i>
-                            </a>
+                            </span>
                         </div>
                         <p class="project-description">
                             Productivity timer application for tracking work sessions, breaks, and time management. Helps improve focus and maintain work-life balance with customizable timer settings.
@@ -660,7 +660,49 @@
                             <span class="tech-tag">Timer</span>
                         </div>
                     </div>
-                </div>
+                </a>
+
+                <a href="mood/index.html" target="_blank" class="project-card">
+                    <div class="project-content">
+                        <div class="project-header">
+                            <i class="fas fa-heart project-icon"></i>
+                            <h3>Mood Logger</h3>
+                            <span class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                            </span>
+                        </div>
+                        <p class="project-description">
+                            Track your emotional wellbeing and mood patterns over time. Log your daily emotions with notes, visualize trends with interactive charts, and gain insights into your emotional health.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Wellness</span>
+                            <span class="tech-tag">Mood Tracking</span>
+                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">Web App</span>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="password/index.html" target="_blank" class="project-card">
+                    <div class="project-content">
+                        <div class="project-header">
+                            <i class="fas fa-key project-icon"></i>
+                            <h3>Password Generator</h3>
+                            <span class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                            </span>
+                        </div>
+                        <p class="project-description">
+                            Generate secure, compliant passwords with customizable complexity settings. Features compliance presets for ISO, PCI, CSA, HIPAA, NIST, and GDPR standards. Create strong passwords with ease.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Security</span>
+                            <span class="tech-tag">Password Generator</span>
+                            <span class="tech-tag">Compliance</span>
+                            <span class="tech-tag">Web App</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
