--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                     </div>
                 </a>
 
-                <a href="timer/index.html" target="_blank" class="project-card">
+                <a href="timer/" target="_blank" class="project-card">
                     <div class="project-content">
                         <div class="project-header">
                             <i class="fas fa-clock project-icon"></i>
@@ -662,7 +662,7 @@
                     </div>
                 </a>
 
-                <a href="mood/index.html" target="_blank" class="project-card">
+                <a href="mood/" target="_blank" class="project-card">
                     <div class="project-content">
                         <div class="project-header">
                             <i class="fas fa-heart project-icon"></i>
@@ -683,7 +683,7 @@
                     </div>
                 </a>
 
-                <a href="password/index.html" target="_blank" class="project-card">
+                <a href="password/" target="_blank" class="project-card">
                     <div class="project-content">
                         <div class="project-header">
                             <i class="fas fa-key project-icon"></i>
