added crawl requirments

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
     <div class="cursor-effect"></div>
     <nav class="navbar">
         <div class="logo">
-            <a href="#home">
-                <img src="robin-hero.png" alt="Robin Thomas" class="logo-image">
-                <span>Robin Thomas</span>
-            </a>
+            <a href="#home">Robin Thomas</a>
         </div>
         <div class="nav-links">
             <a href="#about">About</a>
