--- a/apps/subnet/index.html
+++ b/apps/subnet/index.html
@@ -179,6 +179,11 @@
         <span id="toastMessage">Subnet calculated successfully!</span>
     </div>
 
+    <!-- Footer -->
+    <footer class="app-footer">
+        <p>❤️ Developed By <a href="https://robinthomasonline.github.io/" target="_blank" rel="noopener noreferrer">Robin Thomas</a></p>
+    </footer>
+
     <script src="subnet.js"></script>
     <script type="application/ld+json">
     {
