--- a/index.html
+++ b/index.html
@@ -787,6 +787,48 @@
                         </div>
                     </div>
                 </a>
+
+                <a href="apps/resume-cover/" target="_blank" class="project-card">
+                    <div class="project-content">
+                        <div class="project-header">
+                            <i class="fas fa-file-alt project-icon"></i>
+                            <h3>Resume & Cover Letter Generator</h3>
+                            <span class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                            </span>
+                        </div>
+                        <p class="project-description">
+                            AI-powered ATS-friendly resume and cover letter generator optimized for international job markets. Uses Gemini AI to create keyword-rich, tailored documents that pass ATS screening and impress recruiters.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">AI-Powered</span>
+                            <span class="tech-tag">ATS-Optimized</span>
+                            <span class="tech-tag">Resume Builder</span>
+                            <span class="tech-tag">Web App</span>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="apps/cofounder-pie/" target="_blank" class="project-card">
+                    <div class="project-content">
+                        <div class="project-header">
+                            <i class="fas fa-chart-pie project-icon"></i>
+                            <h3>Co-Founder Pie</h3>
+                            <span class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                            </span>
+                        </div>
+                        <p class="project-description">
+                            Calculate fair equity distribution for startup co-founders based on contributions, tasks, and responsibilities. Supports 2-10 founders with weighted task scoring and automatic percentage calculations.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Equity Calculator</span>
+                            <span class="tech-tag">Startup Tools</span>
+                            <span class="tech-tag">Business Calculator</span>
+                            <span class="tech-tag">Web App</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
