--- a/apps/ip/index.html
+++ b/apps/ip/index.html
@@ -140,6 +140,11 @@
         <span id="toastMessage">Information loaded successfully!</span>
     </div>
 
+    <!-- Footer -->
+    <footer class="app-footer">
+        <p>❤️ Developed By <a href="https://robinthomasonline.github.io/" target="_blank" rel="noopener noreferrer">Robin Thomas</a></p>
+    </footer>
+
     <script src="ip.js"></script>
     <script type="application/ld+json">
     {
