--- a/apps/kanban/index.html
+++ b/apps/kanban/index.html
@@ -150,6 +150,11 @@
         <span id="toastMessage">Task saved successfully!</span>
     </div>
 
+    <!-- Footer -->
+    <footer class="app-footer">
+        <p>❤️ Developed By <a href="https://robinthomasonline.github.io/" target="_blank" rel="noopener noreferrer">Robin Thomas</a></p>
+    </footer>
+
     <script src="kanban.js"></script>
     <script type="application/ld+json">
     {
