--- a/apps/keralalottery/index.html
+++ b/apps/keralalottery/index.html
@@ -45,6 +45,12 @@
       <button class="draw-btn" id="draw-btn">Draw</button>
     </div>
   </div>
+
+  <!-- Footer -->
+  <footer class="app-footer">
+    <p>❤️ Developed By <a href="https://robinthomasonline.github.io/" target="_blank" rel="noopener noreferrer">Robin Thomas</a></p>
+  </footer>
+
   <script src="script.js"></script>
   <script type="application/ld+json">
   {
