--- a/apps/mood/index.html
+++ b/apps/mood/index.html
@@ -277,6 +277,11 @@
         </section>
     </div>
 
+    <!-- Footer -->
+    <footer class="app-footer">
+        <p>❤️ Developed By <a href="https://robinthomasonline.github.io/" target="_blank" rel="noopener noreferrer">Robin Thomas</a></p>
+    </footer>
+
     <script src="mood.js"></script>
     <script type="application/ld+json">
     {
