--- a/apps/timer/index.html
+++ b/apps/timer/index.html
@@ -213,6 +213,11 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="app-footer">
+        <p>❤️ Developed By <a href="https://robinthomasonline.github.io/" target="_blank" rel="noopener noreferrer">Robin Thomas</a></p>
+    </footer>
+
     <script src="timer.js"></script>
     <script type="application/ld+json">
     {
