--- a/apps/index.html
+++ b/apps/index.html
@@ -512,6 +512,30 @@
                     <i class="fas fa-arrow-right"></i>
                 </div>
             </a>
+
+            <a href="daybook/" class="project-card">
+                <div class="project-icon">
+                    <i class="fas fa-book"></i>
+                </div>
+                <h2 class="project-title">Daybook</h2>
+                <p class="project-description">
+                    Track income and expenses for small shops with customer details, invoice generation, and data export. 
+                    Perfect for small business bookkeeping with local storage and print-ready invoices.
+                </p>
+                <ul class="project-features">
+                    <li>Income and expense tracking</li>
+                    <li>Customer name and details</li>
+                    <li>Invoice generation</li>
+                    <li>CSV and JSON export</li>
+                    <li>Shop settings management</li>
+                    <li>Edit and delete entries</li>
+                    <li>Local storage persistence</li>
+                </ul>
+                <div class="project-link">
+                    <span>View Project</span>
+                    <i class="fas fa-arrow-right"></i>
+                </div>
+            </a>
         </div>
     </div>
 
