--- a/index.html
+++ b/index.html
@@ -829,6 +829,27 @@
                         </div>
                     </div>
                 </a>
+
+                <a href="apps/daybook/" target="_blank" class="project-card">
+                    <div class="project-content">
+                        <div class="project-header">
+                            <i class="fas fa-book project-icon"></i>
+                            <h3>Daybook</h3>
+                            <span class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                            </span>
+                        </div>
+                        <p class="project-description">
+                            Track income and expenses for small shops with customer details, invoice generation, and data export. Perfect for small business bookkeeping with local storage and print-ready invoices.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Bookkeeping</span>
+                            <span class="tech-tag">Invoice Generator</span>
+                            <span class="tech-tag">Small Business</span>
+                            <span class="tech-tag">Web App</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
